--- a/index.html
+++ b/index.html
@@ -54,37 +54,37 @@
             <ul class="slides">
               <li>
                 <a href="_img/payments/payments_00_welcome.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_00_welcome_s.png" class="no-boxshadow" alt="Payments by Wave - Welcome view" />
+                  <img src="_img/payments/payments_00_welcome_s2.png" class="no-boxshadow" alt="Payments by Wave - Welcome view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payments/payments_01_setup.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_01_setup_s.png" class="no-boxshadow" alt="Payments by Wave - Setup view" />
+                  <img src="_img/payments/payments_01_setup_s2.png" class="no-boxshadow" alt="Payments by Wave - Setup view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payments/payments_02_accept.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_02_accept_s.png" class="no-boxshadow" alt="Payments by Wave - Accept payment view" />
+                  <img src="_img/payments/payments_02_accept_s2.png" class="no-boxshadow" alt="Payments by Wave - Accept payment view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payments/payments_03_card_input.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_03_card_input_s.png" class="no-boxshadow" alt="Payments by Wave - Card input view" />
+                  <img src="_img/payments/payments_03_card_input_s2.png" class="no-boxshadow" alt="Payments by Wave - Card input view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payments/payments_04_menu.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_04_menu_s.png" class="no-boxshadow" alt="Payments by Wave - Menu view" />
+                  <img src="_img/payments/payments_04_menu_s2.png" class="no-boxshadow" alt="Payments by Wave - Menu view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payments/payments_05_list.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_05_list_s.png" class="no-boxshadow" alt="Payments by Wave - List view" />
+                  <img src="_img/payments/payments_05_list_s2.png" class="no-boxshadow" alt="Payments by Wave - List view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payments/payments_06_settings.png" class="img view" rel="project_9">
-                  <img src="_img/payments/payments_06_settings_s.png" class="no-boxshadow" alt="Payments by Wave - Settings view" />
+                  <img src="_img/payments/payments_06_settings_s2.png" class="no-boxshadow" alt="Payments by Wave - Settings view" />
                 </a>
               </li>
             </ul>
@@ -123,7 +123,7 @@
               </div>
               <div id="prj9_s5_info" class="slide_info">
                 <p>In addition to user feedback, I've determined a number of KPIs (Key Performance Indicators) that we'll monitor via our in-house setup, <a href="http://mixpanel.com" target="_blank">Mixpanel</a>, and <a href="http://leanplum.com" target="_blank">Leanplum</a>. These metrics will help inform us which areas of the app need improvement, which need to be removed and if we're meeting & exceeding our goals.</p>
-                <p>We'll watch things like DAU (Daily Active Users) & DAU/MAU (Daily Active Users/Monthly Active Users) to determine stickiness and retention, payments volume, sign ups and the LTV (Life Time Value) of the users we're acquiring.</p>
+                <p>We'll watch things like DAU (Daily Active Users) & DAU/MAU (Daily Active Users/Monthly Active Users) to determine stickiness and retention. We'll also closely watch downloads, payments volume, sign ups and the LTV (Life Time Value) of the users we're acquiring.</p>
               </div>
               <div id="prj9_s6_info" class="slide_info">
                 <strong>List view</strong>
@@ -145,32 +145,32 @@
             <ul class="slides">
               <li>
                 <a href="_img/receipts/android/receipts-android-welcome-tour_01_welcome.png" class="img view" rel="project_10">
-                  <img src="_img/receipts/android/receipts-android-welcome-tour_01_welcome_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Welcome" />
+                  <img src="_img/receipts/android/receipts-android-welcome-tour_01_welcome_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Welcome" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android-welcome-tour_02_scan.png" class="img view" rel="project_10">
-                  <img src="_img/receipts/android/receipts-android-welcome-tour_02_scan_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Scan" />
+                  <img src="_img/receipts/android/receipts-android-welcome-tour_02_scan_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Scan" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android-welcome-tour_03_wave.png" class="img view" rel="project_10">
-                  <img src="_img/receipts/android/receipts-android-welcome-tour_03_wave_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Wave" />
+                  <img src="_img/receipts/android/receipts-android-welcome-tour_03_wave_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Wave" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android-welcome-tour_04_prepared.png" class="img view" rel="project_10">
-                  <img src="_img/receipts/android/receipts-android-welcome-tour_04_prepared_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Be Prepared" />
+                  <img src="_img/receipts/android/receipts-android-welcome-tour_04_prepared_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Be Prepared" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android-welcome-tour_05_signup.png" class="img view" rel="project_10">
-                  <img src="_img/receipts/android/receipts-android-welcome-tour_05_signup_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Sign up" />
+                  <img src="_img/receipts/android/receipts-android-welcome-tour_05_signup_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Sign up" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android-welcome-tour_06_signin.png" class="img view" rel="project_10">
-                  <img src="_img/receipts/android/receipts-android-welcome-tour_06_signin_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Sign in" />
+                  <img src="_img/receipts/android/receipts-android-welcome-tour_06_signin_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome tour - Sign in" />
                 </a>
               </li>
             </ul>
@@ -219,22 +219,22 @@
             <ul class="slides">
               <li>
                 <a href="_img/receipts/android/receipts-android_00_welcome.png" class="img view" rel="project_8">
-                  <img src="_img/receipts/android/receipts-android_00_welcome_s.png" class="no-boxshadow" alt="Receipts by Wave - Android - Welcome" />
+                  <img src="_img/receipts/android/receipts-android_00_welcome_s2.png" class="no-boxshadow" alt="Receipts by Wave - Android - Welcome" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android_01_list.png" class="img view" rel="project_8">
-                  <img src="_img/receipts/android/receipts-android_01_list_s.png" class="no-boxshadow" alt="Receipts by Wave - Android - List" />
+                  <img src="_img/receipts/android/receipts-android_01_list_s2.png" class="no-boxshadow" alt="Receipts by Wave - Android - List" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android_02_detail.png" class="img view" rel="project_8">
-                  <img src="_img/receipts/android/receipts-android_02_detail_s.png" class="no-boxshadow" alt="Receipts by Wave - Android - Detail" />
+                  <img src="_img/receipts/android/receipts-android_02_detail_s2.png" class="no-boxshadow" alt="Receipts by Wave - Android - Detail" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/android/receipts-android_03_menu.png" class="img view" rel="project_8">
-                  <img src="_img/receipts/android/receipts-android_03_menu_s.png" class="no-boxshadow" alt="Receipts by Wave - Android - Menu" />
+                  <img src="_img/receipts/android/receipts-android_03_menu_s2.png" class="no-boxshadow" alt="Receipts by Wave - Android - Menu" />
                 </a>
               </li>
             </ul>
@@ -300,32 +300,32 @@
             <ul class="slides">
               <li>
                 <a href="_img/receipts/receipts-welcome2.png" class="img view" rel="project_7">
-                  <img src="_img/receipts/receipts-welcome2_s.png" class="no-boxshadow" alt="Receipts by Wave - Welcome view" />
+                  <img src="_img/receipts/receipts-welcome2_s2.png" class="no-boxshadow" alt="Receipts by Wave - Welcome view" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/receipts-listview.png" class="img view" rel="project_7">
-                  <img src="_img/receipts/receipts-listview_s.png" class="no-boxshadow" alt="Receipts by Wave - Receipt list view" />
+                  <img src="_img/receipts/receipts-listview_s2.png" class="no-boxshadow" alt="Receipts by Wave - Receipt list view" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/receipts-detailview.png" class="img view" rel="project_7">
-                  <img src="_img/receipts/receipts-detailview_s.png" class="no-boxshadow" alt="Receipts by Wave - Receipt detail view" />
+                  <img src="_img/receipts/receipts-detailview_s2.png" class="no-boxshadow" alt="Receipts by Wave - Receipt detail view" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/receipts-menu.png" class="img view" rel="project_7">
-                  <img src="_img/receipts/receipts-menu_s.png" class="no-boxshadow" alt="Receipts by Wave - Menu" />
+                  <img src="_img/receipts/receipts-menu_s2.png" class="no-boxshadow" alt="Receipts by Wave - Menu" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/receipts-ios-feature.png" class="img view" rel="project_7">
-                  <img src="_img/receipts/receipts-ios-feature_s.png" class="no-boxshadow" alt="Receipts by Wave - Feature" />
+                  <img src="_img/receipts/receipts-ios-feature_s2.png" class="no-boxshadow" alt="Receipts by Wave - Feature" />
                 </a>
               </li>
               <li>
                 <a href="_img/receipts/receipts-ios-feature2.png" class="img view" rel="project_7">
-                  <img src="_img/receipts/receipts-ios-feature2_s.png" class="no-boxshadow" alt="Receipts by Wave - Ranking" />
+                  <img src="_img/receipts/receipts-ios-feature2_s2.png" class="no-boxshadow" alt="Receipts by Wave - Ranking" />
                 </a>
               </li>
             </ul>
@@ -394,22 +394,22 @@
             <ul class="slides">
               <li>
                 <a href="_img/payroll/payroll-welcome2.png" class="img view" rel="project_6">
-                  <img src="_img/payroll/payroll-welcome2_s.png" class="no-boxshadow" alt="Payroll by Wave - Welcome view" />
+                  <img src="_img/payroll/payroll-welcome_s2.png" class="no-boxshadow" alt="Payroll by Wave - Welcome view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payroll/payroll-homeview.png" class="img view" rel="project_6">
-                  <img src="_img/payroll/payroll-homeview_s.png" class="no-boxshadow" alt="Payroll by Wave - Home view" />
+                  <img src="_img/payroll/payroll-homeview_s2.png" class="no-boxshadow" alt="Payroll by Wave - Home view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payroll/payroll-payroll.png" class="img view" rel="project_6">
-                  <img src="_img/payroll/payroll-payroll_s.png" class="no-boxshadow" alt="Payroll by Wave - Payroll view" />
+                  <img src="_img/payroll/payroll-payroll_s2.png" class="no-boxshadow" alt="Payroll by Wave - Payroll view" />
                 </a>
               </li>
               <li>
                 <a href="_img/payroll/payroll-pay_stub.png" class="img view" rel="project_6">
-                  <img src="_img/payroll/payroll-pay_stub_s.png" class="no-boxshadow" alt="Payroll by Wave - Pay stub view" />
+                  <img src="_img/payroll/payroll-pay_stub_s2.png" class="no-boxshadow" alt="Payroll by Wave - Pay stub view" />
                 </a>
               </li>
             </ul>
