Refreshed local files with those from prod

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
             </div>
           </div>
         </article>
-        <article><!-- Receipts by Wave (Android) - On-boarding -->
+        <!-- Receipts by Wave (Android) - On-boarding -->
+        <!--
+        <article>
           <div id="project_10" class="images">
             <ul class="slides">
               <li>
@@ -214,6 +216,7 @@
             </div>
           </div>
         </article>
+        -->
         <article><!-- Receipts by Wave (Android) -->
           <div id="project_8" class="images">
             <ul class="slides">
