Fixed an issue with the nav pointing to /stage

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 <body>
   <header id="masthead">
     <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a UX and Product Designer.</span></h1>
-    <div class="title">I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, 
+    <div class="title">I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>,
       <span id="tagline2">an interface designer.</span></div>
     <nav>
       <ul>
-        <li class="active"><a href="/stage/" title="Work">Work</a></li>
+        <li class="active"><a href="/" title="Work">Work</a></li>
         <li><a href="/cv.html" title="Resume">Resume</a></li>
         <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
       </ul>
@@ -446,7 +446,7 @@
                 <p>As Product Manager &amp; Designer of the mobile team I was asked to wear many hats. I served as Product Designer, Visual Designer, Development Manager and was heavily involved with our marketing efforts.</p>
               </div>
               <div id="prj6_s4_info" class="slide_info">
-                empty  
+                empty
               </div>
             </div>
             <div class="tags">
@@ -739,7 +739,7 @@
               </div>
             </form>
           </div>
-          <!--End mc_embed_signup-->                    
+          <!--End mc_embed_signup-->
         </article>
       </div>
     </div>
