Added new (commented out) section for Stylefind

--- a/index.html
+++ b/index.html
@@ -48,7 +48,100 @@
         <article class="cv">
           <p>UX and Product Designer with 7+ years experience creating functional and innovative mobile and web apps. Currently, the Product Manager of Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
         </article>
-
+        <!-- Stylefind (iOS) -->
+        <!--
+        <article>
+          <div id="project_10" class="images">
+            <ul class="slides">
+              <li>
+                <a href="_img/stylefind/stylefind_00_welcome.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_00_welcome_s2.png" class="no-boxshadow" alt="Stylefind - Welcome view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind/stylefind_01_setup.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_01_setup_s2.png" class="no-boxshadow" alt="Stylefind - Setup view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind/stylefind_02_accept.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_02_accept_s2.png" class="no-boxshadow" alt="Stylefind - Accept payment view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind/stylefind_03_card_input.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_03_card_input_s2.png" class="no-boxshadow" alt="Stylefind - Card input view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind/stylefind_04_menu.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_04_menu_s2.png" class="no-boxshadow" alt="Stylefind - Menu view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind/stylefind_05_list.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_05_list_s2.png" class="no-boxshadow" alt="Stylefind - List view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind/stylefind_06_settings.png" class="img view" rel="project_9">
+                  <img src="_img/stylefind/stylefind_06_settings_s2.png" class="no-boxshadow" alt="Stylefind - Settings view" />
+                </a>
+              </li>
+            </ul>
+            <div class="nav"></div>
+          </div>
+          <div class="description">
+            <div class="title">Stylefind (iOS) <span>- Beta</span></div>
+            <div class="info">
+              <div id="prj9_s1_info" class="slide_info">
+                <p>Payments by Wave is a credit card &amp; cash payments app for iOS.</p>
+                <br>
+                <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
+                <br><br>
+                <a href="http://waveapps.com/mobilepaymentsbeta" title="waveapps.com/mobilepaymentsbeta" target="_blank">Beta sign up</a>
+              </div>
+              <div id="prj9_s2_info" class="slide_info">
+                <p>This app came to fruition in a slightly irregular way. For our first Hackathon at Wave I wanted to create an app that enabled users to accept a credit card (or cash) payment and then have the payment seamlessly flow into Wave's cloud accounting app.</p>
+                <br>
+                <p>Additionally, I wanted to provide our users the ability to input credit card information as quickly and easily as possible and I wanted to ensure that a receipt of the transaction would be sent after the transaction was successful.</p>
+              </div>
+              <div id="prj9_s3_info" class="slide_info">
+                <p>Once it was decided that we would take Payments by Wave for iOS from Hackathon to production I:</p>
+                <ul class="styled">
+                  <li>Gathered feedback from co-workers</li>
+                  <li>Improved the existing wireframes</li>
+                  <li>Polished up the visual design</li>
+                  <li>Created user stories for a beta build and beyond</li>
+                  <li>Worked with the Payments back-end team to create additional APIs</li>
+                  <li>Recruited and surveyed potential beta participants</li>
+                  <li>Collected feedback from 60 beta participants</li>
+                  <li>Definied measurable goals for the app after launch</li>
+                </ul>
+              </div>
+              <div id="prj9_s4_info" class="slide_info">
+                <p>From the feedback, I wanted to determine how new and existing Wave users would use the app. I wanted to know which features worked, which didn't, what functionality was unnecessary and what was missing. I was looking at the beta as an MVP to tell us what our users actually wanted and what would enable them to get paid faster.</p>
+              </div>
+              <div id="prj9_s5_info" class="slide_info">
+                <p>In addition to user feedback, I've determined a number of KPIs (Key Performance Indicators) that we'll monitor via our in-house setup, <a href="http://mixpanel.com" target="_blank">Mixpanel</a>, and <a href="http://leanplum.com" target="_blank">Leanplum</a>. These metrics will help inform us which areas of the app need improvement, which need to be removed and if we're meeting & exceeding our goals.</p>
+                <p>We'll watch things like DAU (Daily Active Users) & DAU/MAU (Daily Active Users/Monthly Active Users) to determine stickiness and retention. We'll also closely watch downloads, payments volume, sign ups and the LTV (Life Time Value) of the users we're acquiring.</p>
+              </div>
+              <div id="prj9_s6_info" class="slide_info">
+                <strong>List view</strong>
+              </div>
+              <div id="prj9_s7_info" class="slide_info">
+                <strong>Settings view</strong>
+              </div>
+            </div>
+            <div class="tags">
+              <ul>
+                <li>Product management</li>
+                <li>Design</li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        -->
         <article><!-- Payments by Wave (iOS) -->
           <div id="project_9" class="images">
             <ul class="slides">
@@ -749,6 +842,7 @@
       <p>You should follow me on <a href="http://twitter.com/scormier" title="Follow Me on Twitter">Twitter</a></p>
     <p>Copyright © 1980-2013</p>
   </footer>
+
   <script src="https://www.google.com/jsapi?key=ABQIAAAA_il1TRM5dInT9TwCZOJVCBTXsBezwwCOedBrfLJwMdtGsZKFWBTi4l8tA8B7m-bMRVWaULIvk84t9A"></script>
   <script type="text/javascript">
     google.load("jquery", "1");
