Added new section markup for Stylefind v1.0

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
         <article class="cv">
           <p>UX and Product Designer with 7+ years experience creating functional and innovative mobile and web apps. Currently, the Product Manager of Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
         </article>
-        <!-- Stylefind (iOS) -->
-        <!--
-        <article>
+
+        <article><!-- Stylefind v0.25 (iOS) -->
           <div id="project_10" class="images">
             <ul class="slides">
               <li>
@@ -92,21 +91,19 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Stylefind (iOS) <span>- Beta</span></div>
+            <div class="title">Stylefind (iOS) <span>- v1.0</span></div>
             <div class="info">
-              <div id="prj9_s1_info" class="slide_info">
-                <p>Payments by Wave is a credit card &amp; cash payments app for iOS.</p>
+              <div id="prj10_s1_info" class="slide_info">
+                <p>Payments by Wave is a credit card &amp; cash stylefind app for iOS.</p>
                 <br>
                 <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
                 <br><br>
                 <a href="http://waveapps.com/mobilepaymentsbeta" title="waveapps.com/mobilepaymentsbeta" target="_blank">Beta sign up</a>
               </div>
-              <div id="prj9_s2_info" class="slide_info">
-                <p>This app came to fruition in a slightly irregular way. For our first Hackathon at Wave I wanted to create an app that enabled users to accept a credit card (or cash) payment and then have the payment seamlessly flow into Wave's cloud accounting app.</p>
-                <br>
-                <p>Additionally, I wanted to provide our users the ability to input credit card information as quickly and easily as possible and I wanted to ensure that a receipt of the transaction would be sent after the transaction was successful.</p>
+              <div id="prj10_s2_info" class="slide_info">
+                <p>Slide info</p>
               </div>
-              <div id="prj9_s3_info" class="slide_info">
+              <div id="prj10_s3_info" class="slide_info">
                 <p>Once it was decided that we would take Payments by Wave for iOS from Hackathon to production I:</p>
                 <ul class="styled">
                   <li>Gathered feedback from co-workers</li>
@@ -119,17 +116,16 @@
                   <li>Definied measurable goals for the app after launch</li>
                 </ul>
               </div>
-              <div id="prj9_s4_info" class="slide_info">
-                <p>From the feedback, I wanted to determine how new and existing Wave users would use the app. I wanted to know which features worked, which didn't, what functionality was unnecessary and what was missing. I was looking at the beta as an MVP to tell us what our users actually wanted and what would enable them to get paid faster.</p>
+              <div id="prj10_s4_info" class="slide_info">
+                <p></p>
               </div>
-              <div id="prj9_s5_info" class="slide_info">
-                <p>In addition to user feedback, I've determined a number of KPIs (Key Performance Indicators) that we'll monitor via our in-house setup, <a href="http://mixpanel.com" target="_blank">Mixpanel</a>, and <a href="http://leanplum.com" target="_blank">Leanplum</a>. These metrics will help inform us which areas of the app need improvement, which need to be removed and if we're meeting & exceeding our goals.</p>
-                <p>We'll watch things like DAU (Daily Active Users) & DAU/MAU (Daily Active Users/Monthly Active Users) to determine stickiness and retention. We'll also closely watch downloads, payments volume, sign ups and the LTV (Life Time Value) of the users we're acquiring.</p>
+              <div id="prj10_s5_info" class="slide_info">
+                <p></p>
               </div>
-              <div id="prj9_s6_info" class="slide_info">
+              <div id="prj10_s6_info" class="slide_info">
                 <strong>List view</strong>
               </div>
-              <div id="prj9_s7_info" class="slide_info">
+              <div id="prj10_s7_info" class="slide_info">
                 <strong>Settings view</strong>
               </div>
             </div>
@@ -141,7 +137,6 @@
             </div>
           </div>
         </article>
-        -->
         <article><!-- Payments by Wave (iOS) -->
           <div id="project_9" class="images">
             <ul class="slides">
