Updated intro copy

--- a/index.html
+++ b/index.html
@@ -46,45 +46,45 @@
         <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a PC for the best experience.</p>
 
         <article class="cv">
-          <p>UX and Product Designer with 7+ years experience creating functional and innovative mobile and web apps. Currently, the Product Manager of Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
+          <p>UX and Product Designer with 7+ years experience creating mobile and web apps. Currently, I'm the a co-founder of a (very) early stage company called <a href="http://stylefind.io/" target="_blank" title="Open stylefind.io in a new tab/window">Stylefind</a>. Previously I've worked at <a href="http://chaordix.com/" target="_blank" title="Open chaordix.com in a new tab/window">Chaordix</a> as a UX Designer & Product Manager, and <a href="http://waveapps.com/" target="_blank" title="Open waveapps.com in a new tab/window">Wave</a>, where I was the Product Designer & Manager of Mobile. I’m passionate about finding and solving problems by creating products that make a positive, lasting impact.</p>
         </article>
 
         <article><!-- Stylefind v0.25 (iOS) -->
           <div id="project_10" class="images">
             <ul class="slides">
               <li>
-                <a href="_img/stylefind/stylefind_00_welcome.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_00_welcome_s2.png" class="no-boxshadow" alt="Stylefind - Welcome view" />
+                <a href="_img/stylefind_v1/stylefindv1_00_capture.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-00-capture_s2.png" class="no-boxshadow" alt="Stylefind - Capture view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind/stylefind_01_setup.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_01_setup_s2.png" class="no-boxshadow" alt="Stylefind - Setup view" />
+                <a href="_img/stylefind_v1/stylefindv1_01_uploading.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-01-uploading_s2.png" class="no-boxshadow" alt="Stylefind - Uploading view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind/stylefind_02_accept.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_02_accept_s2.png" class="no-boxshadow" alt="Stylefind - Accept payment view" />
+                <a href="_img/stylefind_v1/stylefindv1_02_results.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefind_02_results_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind/stylefind_03_card_input.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_03_card_input_s2.png" class="no-boxshadow" alt="Stylefind - Card input view" />
+                <a href="_img/stylefind_v1/stylefind_03_card_input.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefind_03_card_input_s2.png" class="no-boxshadow" alt="Stylefind - Card input view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind/stylefind_04_menu.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_04_menu_s2.png" class="no-boxshadow" alt="Stylefind - Menu view" />
+                <a href="_img/stylefind_v1/stylefind_04_menu.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefind_04_menu_s2.png" class="no-boxshadow" alt="Stylefind - Menu view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind/stylefind_05_list.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_05_list_s2.png" class="no-boxshadow" alt="Stylefind - List view" />
+                <a href="_img/stylefind_v1/stylefind_05_list.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefind_05_list_s2.png" class="no-boxshadow" alt="Stylefind - List view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind/stylefind_06_settings.png" class="img view" rel="project_9">
-                  <img src="_img/stylefind/stylefind_06_settings_s2.png" class="no-boxshadow" alt="Stylefind - Settings view" />
+                <a href="_img/stylefind_v1/stylefind_06_settings.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefind_06_settings_s2.png" class="no-boxshadow" alt="Stylefind - Settings view" />
                 </a>
               </li>
             </ul>
@@ -98,7 +98,7 @@
                 <br>
                 <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
                 <br><br>
-                <a href="http://waveapps.com/mobilepaymentsbeta" title="waveapps.com/mobilepaymentsbeta" target="_blank">Beta sign up</a>
+                <a href="#" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
               </div>
               <div id="prj10_s2_info" class="slide_info">
                 <p>Slide info</p>
